# bsk-scraper

./: README.md  makefile  pyproject.toml
bsk_scraper/: main.py
