[tool.poetry]
name = "bsk-scraper"
version = "0.1.0"
description = ""
authors = ["Kiwinicki <szefek24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
